# eos-file-integrity-checker

./: .gitignore  FileIntegrity.vala  README.md  meson.build
data/: net.bugabinga.eos.FileIntegrity.appdata.xml.in  net.bugabinga.eos.FileIntegrity.desktop
debian/: changelog  control  copyright
po/: POTFILES  de.po  meson.build  net.bugabinga.eos.FileIntegrity.pot  pl.po
src/: AppState.vala  FileIntegrity.vala  WelcomeView.vala
